tests-integration/tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/02/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/02/input.essence:2:20:
  |
2 | such that b = and([1, 3])
  |                    ^
Type error: 1
	Expected: bool
	Got: int

tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/02/input.essence:2:23:
  |
2 | such that b = and([1, 3])
  |                       ^
Type error: 3
	Expected: bool
	Got: int